name:                mutvar-vs-state
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sgraf812/mutvar-vs-state#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           2017 Sebastian Graf
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

benchmark mutvar-vs-state-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base
                     , primitive
                     , transformers
                     , criterion
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgraf812/mutvar-vs-state
